--- a/MvvmExampleAndroid/Resources/layout/activity_list_example.xml
+++ b/MvvmExampleAndroid/Resources/layout/activity_list_example.xml
@@ -1,14 +1,49 @@
-﻿<?xml version="1.0" encoding="UTF-8" ?>
+<?xml version="1.0" encoding="UTF-8" ?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:local="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <MvxRecyclerView
-        android:id="@+id/my_recycler_view"
-        android:scrollbars="vertical"
+
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        local:MvxItemTemplate="@layout/list_item"
-        local:MvxBind="ItemsSource People" />
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_margin="5dp">
+        <EditText
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:inputType="text"
+            android:hint="Insert Location to search"
+            android:layout_marginEnd="5dp"
+            local:MvxBind="Text SearchTerm" />
+
+        <Button
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:text="Search"
+            local:MvxBind="Click FetchResultsCommand"/>
+    </LinearLayout>
+
+    <MvvmCross.DroidX.MvxSwipeRefreshLayout
+        android:id="@+id/refresher"
+		android:layout_width="match_parent"
+		android:layout_height="match_parent"
+		local:layout_behavior="@string/appbar_scrolling_view_behavior"
+		local:MvxBind="IsRefreshing LoadWeatherResultTask">
+
+        <mvvmcross.droid.support.v7.recyclerview.MvxRecyclerView
+            android:id="@+id/my_recycler_view"
+            android:scrollbars="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            local:MvxItemTemplate="@layout/weather_item"
+            local:MvxBind="ItemsSource WeatherResults" />
+
+    </MvvmCross.DroidX.MvxSwipeRefreshLayout>
+
+    
+
+  
 </LinearLayout>
