Add navigation with navigation service and display image

--- a/MvvmExampleAndroid/Resources/layout/activity_list_example.xml
+++ b/MvvmExampleAndroid/Resources/layout/activity_list_example.xml
@@ -39,7 +39,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             local:MvxItemTemplate="@layout/weather_item"
-            local:MvxBind="ItemsSource WeatherResults" />
+            local:MvxBind="ItemsSource WeatherResults; ItemClick ResultSelectedCommand" />
 
     </MvvmCross.DroidX.MvxSwipeRefreshLayout>
 
